diwi: spi webapp furhter work

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -28,7 +28,7 @@
 <body>
 <div id="top"><img src="media/images/top2.jpg" border="0"/></div>
 
-<div id="topfoto"><img id="plaatje" src="media/images/01.gif"/></div>
+<div id="topfoto"><img id="plaatje" src="media/images/01.jpg"/></div>
 
 <div id="butwelkom">
 	<img class="button" id="b1" src="media/buttons/welkom.gif"/>
@@ -50,24 +50,24 @@
 	<div id="bovenbutlijn"><img src="media/images/bovenbuttons.gif"/></div>
 
 	<div id="butinloggen">
-		<img id="b5" src="media/buttons/inloggen.gif"/>
+		<img class="button" id="b5" src="media/buttons/inloggen.gif"/>
 	</div>
 
 	<div id="butuitloggen" style="display:none">
-		<img id="b6" src="media/buttons/uitloggen.gif">
+		<img class="button" id="b6" src="media/buttons/uitloggen.gif">
 	</div>
 
 	<div id="butmaakroute" style="display:none;">
-		<img id="b7" src="media/buttons/maakroute.gif"/>
+		<img class="button" id="b7" src="media/buttons/maakroute.gif"/>
 	</div>
 
 	<div id="butmijnpagina" style="display:none;">
-		<img id="b8" src="media/buttons/mijnpagina.gif"/>
+		<img class="button" id="b8" src="media/buttons/mijnpagina.gif"/>
 	</div>
 
 	<div id="onderbutlijn"><img src="media/images/onderbuttons2.gif"/></div>
 
-	<div id="inlogbox" style="display:none;"><img src="media/images/videobox.gif"/></div>
+	<div id="inlogbox" style="display:none;"><img src="media/images/balloon.gif"/></div>
 
 	<div id="inlogform" class="logform" style="display:none;">
 		<form id="loginform" class="logform" action="javascript:DIWIAPP.login()">
@@ -85,9 +85,20 @@
 		</form>
 	</div>
 
+	<div id="balloon"><img src="media/images/balloon.gif"></div>
+	<div id="bullet"><img src="media/images/bullet.gif" /></div>
+	<div id="balloontext">
+		Hier allerlei meldingen texten etc. 	De Digitale Wichelroede is een slim apparaat dat een heleboel weet, zodat jij als gebruiker d&iacute;e
+	cultuurhistorische kennis eruit kan halen waarover je graag wat meer te weten wilt komen. Bij het ontwikkelen
+		van het apparaat moet daarom eerst een heleboel kennis verzameld en gedigitaliseerd worden. Deze informatie
+		halen we overal vandaan. Uit boeken, databases, maar ook van historische verenigingen en van mensen die in een
 
-	<div id="videobox"><img src="media/images/videobox.gif"></div>
+	</div>
+	<div id="generated-routes-image">&nbsp;</div>
+
 	<!--	<div id="fotovideobox"><a href="home/images/fotovideobox.gif" rel="lightbox"><img src="home/images/fotovideobox.gif" ></a> </div> -->
+	<!--
+	<div id="videobox"><img src="media/images/videobox.gif"></div>
 	<div id="fotovideobox"><img src="media/images/fotovideobox.gif"></div>
 
 	<div id="spotmetbox"><img src="media/images/spotmetbox.gif"></div>
@@ -98,14 +109,13 @@
 
 	<div id="watistext">
 
-		<!--	<font size="-2">Wat is de digitale wichelroede en wat kun je er allemaal mee? Klik om de introductie video te bekijken.</font> -->
 		<font size="-2">Helaas is er in de huidige versie nog geen introductie video te bekijken.</font>
 
 	</div>
-
+	 -->
 </div>
 
-<div id="line"><img src="media/images/lijn.gif"><span id="msg">niet ingelogd</span></div>
+<div id="line"><img src="media/images/lijn.gif"><span id="status">niet ingelogd</span></div>
 
 
 <div id="pagina" class="pagina">
