diwi: generate route shows route on map

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="lib/gt/KWClientExt.js"></script>
 	<script type="text/javascript" src="lib/gt/Server.js"></script>
 	<script type="text/javascript" src="lib/gt/Record.js"></script>
+	<script type="text/javascript" src="lib/openlayers/lib/OpenLayers.js"></script>
 
 	<script type="text/javascript" src="js/KWClientDiWi.js"></script>
 	<script type="text/javascript" src="js/KWClientCMS.js"></script>
