--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -141,8 +141,7 @@
 </div>
 
 <div id="butmaakeigenroute">
-	<a><img src="media/buttons/maakroute-submit.gif" onMouseOver="" onMouseOut="" onClick="javascript:DIWIAPP.createRoute();"
-			border="0"></a>
+	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:DIWIAPP.createRoute();" />
 </div>
 
 
