diwi: updated showing fixed routes

--- a/app/diwi/trunk/client/web/pages/routes.html
+++ b/app/diwi/trunk/client/web/pages/routes.html
@@ -1,9 +1,9 @@
-<h1>Vaste Routes</h1>
+<h2>Vaste Routes</h2>
 <p>
+Bekijk een van de vaste routes
 	<form action="#">
 		<select id="fixed_routes_form">
 		</select>
 	</form>
 </p>
-<div id="fixed_routes_content">
-</div>
+<div id="map"></div>
