diwi: web client updates

--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -141,7 +141,7 @@
 </div>
 
 <div id="butmaakeigenroute">
-	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:DIWIAPP.createRoute();" />
+	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:ROUTE.createRoute();" />
 </div>
 
 
