diwi: web generate route is working !

--- a/app/diwi/trunk/client/web/mypage/mypage.html
+++ b/app/diwi/trunk/client/web/mypage/mypage.html
@@ -24,7 +24,7 @@
 
 
 <!-- slcr.js maakt de sliders... -->
-<script type="text/javascript" src="../js/maakroute.js"></script>
+<script type="text/javascript" src="../js/DiWiRoute.js"></script>
 
 <!-- Einde van alles wat op maakroutepagina getoond moet worden. ------------------------------------------>
 <script type="text/javascript" src="../js/selectstartpage.js"></script>
