--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="slidertext" id="besloten">
-	<input id="s1value" size="3" value="0" onChange="s1.setValue(parseInt(this.value))"/>%
+	<input id="s1value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption2">
@@ -35,7 +35,7 @@
 </div>
 
 <div class="slidertext" id="halfopen">
-	<input id="s2value" size="3" value="0" onChange="s2.setValue(parseInt(this.value))"/>%
+	<input id="s2value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption3">
@@ -47,7 +47,7 @@
 </div>
 
 <div class="slidertext" id="open">
-	<input id="s3value" size="3" value="0" onChange="s3.setValue(parseInt(this.value))"/>%
+	<input id="s3value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption4">
@@ -59,7 +59,7 @@
 </div>
 
 <div class="slidertext" id="bedrijven">
-	<input id="s4value" size="3" value="0" onChange="s4.setValue(parseInt(this.value))"/>%
+	<input id="s4value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption5">
@@ -71,7 +71,7 @@
 </div>
 
 <div class="slidertext" id="bewoning">
-	<input id="s5value" size="3" value="0" onChange="s5.setValue(parseInt(this.value))"/>%
+	<input id="s5value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption6">
@@ -83,7 +83,7 @@
 </div>
 
 <div class="slidertext" id="bos">
-	<input id="s6value" size="3" value="0" onChange="s6.setValue(parseInt(this.value))"/>%
+	<input id="s6value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption7">
@@ -95,7 +95,7 @@
 </div>
 
 <div class="slidertext" id="heide">
-	<input id="s7value" size="3" value="0" onChange="s7.setValue(parseInt(this.value))"/>%
+	<input id="s7value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption8">
@@ -107,7 +107,7 @@
 </div>
 
 <div class="slidertext" id="grasland">
-	<input id="s8value" size="3" value="0" onChange="s8.setValue(parseInt(this.value))"/>%
+	<input id="s8value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption9">
@@ -119,7 +119,7 @@
 </div>
 
 <div class="slidertext" id="zee">
-	<input id="s9value" size="3" value="0" onChange="s9.setValue(parseInt(this.value))"/>%
+	<input id="s9value" size="3" value="0" />%
 </div>
 
 <div class="slidercaption" id="caption10">
@@ -131,11 +131,11 @@
 </div>
 
 <div class="slidertext" id="sloten">
-	<input id="s10value" size="3" value="0" onChange="s10.setValue(parseInt(this.value))"/>%
+	<input id="s10value" size="3" value="0" />%
 </div>
 
 <div id="butmaakeigenroute">
-	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:ROUTE.createRoute();" />
+	<img class="button" src="media/buttons/maakroute-submit.gif" onClick="javascript:ROUTE.generateRoute();" />
 </div>
 
 
