--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="js/KWClientCMS.js"></script>
 	<script type="text/javascript" src="js/DiWiMap.js"></script>
 	<script type="text/javascript" src="js/DiWiNav.js"></script>
-	<script type="text/javascript" src="js/maakroute.js"></script>
+	<script type="text/javascript" src="js/DiWiRoute.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
 	<script type="text/javascript" src="js/range.js"></script>
 	<script type="text/javascript" src="js/timer.js"></script>
