--- a/app/diwi/trunk/client/web/pages/routemap.html
+++ b/app/diwi/trunk/client/web/pages/routemap.html
@@ -1,5 +1,5 @@
 <p>Selecteer kaartlaag met (+) symbool. Inzoomen met shift-mouse-drag.</p>
-<div id="map"></div>
+<div id="mapanchor"></div>
 <p>&nbsp;</p>
 
 
