--- a/app/diwi/trunk/client/web/pages/routes.html
+++ b/app/diwi/trunk/client/web/pages/routes.html
@@ -1,9 +1,6 @@
 <h2>Vaste Routes</h2>
 <p>
 Bekijk een van de vaste routes
-	<form action="#">
-		<select id="fixed_routes_form">
-		</select>
-	</form>
+<span><form action="#"><select id="fixed_routes_form"></select></form></span>
 </p>
-<div id="map"></div>
+<div id="mapanchor">&nbsp;</div>
