diwi: some first impl for trip display

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="js/DiWiMap.js"></script>
 	<script type="text/javascript" src="js/DiWiNav.js"></script>
 	<script type="text/javascript" src="js/DiWiRoute.js"></script>
+	<script type="text/javascript" src="js/DiWiTrip.js"></script>
 	<script type="text/javascript" src="js/slider.js"></script>
 	<script type="text/javascript" src="js/range.js"></script>
 	<script type="text/javascript" src="js/timer.js"></script>
