--- a/app/diwi/trunk/client/web/pages/mijnpagina.html
+++ b/app/diwi/trunk/client/web/pages/mijnpagina.html
@@ -1,4 +1,6 @@
-<h1>Mijn Pagina</h1>
-<p>
-Hieronder een lijst van uw gemaakte tochten.
-</p>
+<h2>Mijn Pagina</h2>
+<div id="triplist">
+
+</div>
+<div id="mapanchor">&nbsp;</div>
+
