--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -78,7 +78,7 @@
 			</p>
 
 			<p> Wachtwoord :<br>
-				<input id="fieldpassword" type="password" name="password"><br>
+				<input type="password" name="password" id="fieldpassword" ><br>
 
 				<div id="logforminlogbut" style="display:inherit">
 					<img id="butloginsubmit" class="button" src="media/buttons/login.gif"/>
