diwi: various updates for routes and map postgis overlays

--- a/app/diwi/trunk/client/web/pages/routes.html
+++ b/app/diwi/trunk/client/web/pages/routes.html
@@ -1,6 +1,3 @@
 <h2>Vaste Routes</h2>
-<p>
-Bekijk een van de vaste routes
-<span><form action="#"><select id="fixed_routes_form"></select></form></span>
-</p>
+<form action="#"><select id="fixed_routes_form"></select></form>
 <div id="mapanchor">&nbsp;</div>
