diwi: div routes

--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -1,10 +1,7 @@
 <div id="maakroutecontainer">
 
 <h2>Maak Route</h2>
-<div class="listboxes" id="startpunt-lb">
-</div>
-
-<div class="listboxes" id="eindpunt-lb">
+<div class="listboxes" id="starteindpunt-lb">
 </div>
 
 <div class="listboxes" id="thema-lb">
