--- a/app/diwi/trunk/client/cms/index.html
+++ b/app/diwi/trunk/client/cms/index.html
@@ -1,15 +1,37 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>De Digitale Wichelroede</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <script type="text/javascript" src="lib/gt/DHTML.js"></script>
-    <script type="text/javascript" src="lib/gt/KWClient.js"></script>
-    <script type="text/javascript" src="lib/gt/KWClientExt.js"></script>
-    <script type="text/javascript" src="js/KWClientCMS.js"></script>
+<title>DIWI POI MANAGER</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link href="css/home.css" rel="stylesheet" type="text/css">
+<script language="JavaScript" type="text/JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+//-->
+</script>
 </head>
 
-
 <body>
-    <h1>veel programmeer plezier</h1>
+<div id="top"><img src="images/top2.jpg" width="597" height="246" border="0" usemap="#Map">
+  <map name="Map">
+    <area shape="rect" coords="326,204,390,228" href="login.html">
+    <area shape="rect" coords="224,205,304,225" href="index.html">
+    <area shape="rect" coords="420,202,502,227" href="cms.html">
+  </map>
+</div>
+<div class="pagina id="Welkom">
+  <h1>WELKOM</h1>
+  <p>Welkom bij het beheersysteem voor de &quot;points of interest&quot; van DIWI. Hier kunt u eenvoudig nieuw punten toevoegen, punten aanpassen en nieuwe verhalen, foto's en filmpjes aan de pois toevoegen.</p>
+
+  <p>Voor toegang tot het systeem click op login. Een toegangscode kunt u aanvragen via ... </p>
+  <p>Deze versie werkt alleen in IE (vanaf versie 6)</p>
+</div>
+  <p>bla</p>
 </body>
 </html>
