--- a/app/diwi/trunk/client/web/pages/routes.html
+++ b/app/diwi/trunk/client/web/pages/routes.html
@@ -1,3 +1,3 @@
-<h2>Vaste Routes</h2>
-<form action="#"><select id="fixed_routes_form"></select></form>
+<div id="vasteroutes">
+</div>
 <div id="mapanchor">&nbsp;</div>
