--- a/base/trunk/server/webapp/gt/map/gmap-wms-test.html
+++ b/base/trunk/server/webapp/gt/map/gmap-wms-test.html
@@ -38,7 +38,7 @@
 			glayerRoads.ratio = 1;
 
 			glayerSat = new OpenLayers.Layer.WMS.Untiled("Gmap Sat",
-					"http://test.geotracing.com/gt/map/gmap-wms.jsp", {layers: 'sat'});
+					"http://test.geotracing.com/gt/map/gmap-wms.jsp", {layers: 'sat', format: "image/jpeg"});
 
 			var twms = new OpenLayers.Layer.WMS( "World Map",
 				"http://world.freemap.in/cgi-bin/mapserv?",
@@ -47,7 +47,7 @@
 				  format: 'png'} );
 
 			map.addLayer(glayerRoads);
-			//map.addLayer(glayerSat);
+			map.addLayer(glayerSat);
 			//map.addLayer(layer);
 			//twms.display("none");
 			// map.addLayer(twms);
