diwi: mapstuff and js trip playback

--- a/app/diwi/trunk/client/web/pages/aanmelden.html
+++ b/app/diwi/trunk/client/web/pages/aanmelden.html
@@ -1,4 +1,6 @@
 <h1>Aanmelden</h1>
-<p>
-	Hier komt aanmeld-formulier...
-</p>
+<p><strong>Meld je nu aan!!!!</strong></p>
+
+<p><i>Doe mee aan het onderzoek naar innovatieve wijzen waarop cultuurhistorische kennis beschikbaar gemaakt kan
+	worden voor de recreant van nu, die wandelend of fietsend zijn omgeving wil beleven.</i><br/><br/><a
+		href="http://webgrs.wur.nl/cgi/projects/diwi/"><strong>Ga naar het aanmeldformulier</strong></a></p>
