--- a/app/diwi/trunk/client/web/pages/faq.html
+++ b/app/diwi/trunk/client/web/pages/faq.html
@@ -1,96 +1,77 @@
 <H1><strong>Veel gestelde vragen</strong><br></H1>
+	<p></p>
 
-<p></p>
+	<H3><strong>Wat is de Digitale Wichelroede?</strong><br></H3>
 
-<H3><strong>Wat is de Digitale Wichelroede?</strong><br></H3>
+	<p>
+		Bij de recreant van nu bestaat de wens het landschap, cultuur en geschiedenis te willen "beleven", het liefst op
+		een zo persoonlijke manier. Daarnaast zal onder meer door de vergrijzing de komende jaren de vrije tijd alleen
+		maar toenemen. Tijd voor het ontwikkeling van nieuwe manieren van actief educatief recreëren. Struinen door het
+		landschap bijvoorbeeld, met een persoonlijke ‘Wichelroede’ die informatie geeft op het moment dat jij als
+		gebruiker persoonlijk geprikkeld wil worden, of die je kan ‘laden’ met eigen persoonlijke verhalen. Want de
+		moderne "Wichelroede" is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
+		bepalingstechnologie, waarmee de gebruiker al lopend of fietsend zijn omgeving fysiek én virtueel kan beleven.
+		<br><br>
+		Deze kennis wordt digitaal gemaakt en gekoppeld aan GEO-Informatie (informatie over geografische objecten,
+		bijvoorbeeld land kaarten of luchtfoto’s). Kennis en mogelijke routes worden in een mobiel apparaat geladen en
+		met behulp van GPS als navigator vindt vervolgens een interactieve overdracht plaats van informatie tussen
+		consument of producent en landschap. Project de Digitale Wichelroede is een onderzoeksproject, hetgeen inhoudt
+		dat we onderzoeken wat mogelijkheden en de onmogelijkheden van een Digitale Wichelroede zijn. Er wordt daarom
+		een testversie ontwikkeld.
+		<br><br>
+	</p>
 
-<p>
-	Bij de recreant van nu bestaat de wens het landschap, cultuur en geschiedenis te willen 'beleven', het liefst op
-	een zo persoonlijke manier. Daarnaast zal onder meer door de vergrijzing de komende jaren de vrije tijd alleen
-	maar toenemen. Tijd voor het ontwikkeling van nieuwe manieren van actief educatief recre&euml;ren. Struinen door
-	het landschap bijvoorbeeld, met een persoonlijke 'Wichelroede' die informatie geeft op het moment dat jij als
-	gebruiker persoonlijk geprikkeld wil worden, of die je kan 'laden' met eigen persoonlijke verhalen. Want de
-	moderne 'Wichelroede' is geen eenvoudige wilge- of hazelaartak, maar een kien product uit de mobiele en locatie
-	bepalingstechnologie, waarmee de gebruiker al lopend of fietsend zijn omgeving fysiek &eacute;n virtueel kan
-	beleven.
-	<br><br>
-	Deze kennis wordt digitaal gemaakt en gekoppeld aan GEO-Informatie (informatie over geografische objecten,
-	bijvoorbeeld land kaarten of luchtfoto's). Kennis en mogelijke routes worden in een mobiel apparaat geladen en
-	met behulp van GPS als navigator vindt vervolgens een interactieve overdracht plaats van informatie tussen
-	consument of producent en landschap. Project de Digitale Wichelroede is een onderzoeksproject, hetgeen inhoudt
-	dat we onderzoeken wat mogelijkheden en de onmogelijkheden van een Digitale Wichelroede zijn. Er wordt daarom
-	een testversie ontwikkeld.
-	<br><br>
-</p>
+	<H3>Is de Digitale Wichelroede te koop?</H3>
 
-<H3>Is de Digitale Wichelroede te koop?</H3>
+	<p>
+		Nee. De Digitale Wichelroede is een onderzoeksproject. Dit betekent dat we een nul-versie ontwikkelen die in de
+		zomer van 2007 wordt getest. Uiteindelijk moeten de resultaten leiden tot het opstellen van een rapport waarin
+		onder meer de bruikbaarheid van een systeem om kennis digitaal op te slaan en van de interface, de ordening van
+		informatie, het onderscheid tussen passief en actief gebruik met het oog op gebruiksgemak, -plezier en
+		intensiteit geëvalueerd wordt. Met de resultaten van ons onderzoek kan in een vervolgtraject een product voor de
+		markt worden gemaakt.
+	</p>
 
-<p>
-	Nee. De Digitale Wichelroede is een onderzoeksproject. Dit betekent dat we een nul-versie ontwikkelen die in de
-	zomer van 2007 door een speciaal team wordt getest. Uiteindelijk moeten de resultaten leiden tot het opstellen
-	van een rapport waarin onder meer de bruikbaarheid van een systeem om kennis digitaal op te slaan en van de
-	interface, de ordening van informatie, het onderscheid tussen passief en actief gebruik met het oog op
-	gebruiksgemak, -plezier en intensiteit ge&euml;valueerd wordt. Met de resultaten van ons onderzoek kan in een
-	vervolgtraject een product voor de markt worden gemaakt.
-</p>
+	<H3>Waarom is onderzoek naar mogelijkheden van
+		gebruik van Locatie gebaseerde technologie van belang?</H3>
 
-<H3>Waarom is onderzoek naar mogelijkheden van
-	gebruik van Locatie gebaseerde technologie van belang?</H3>
+	<p>
+		De verwachting is dat Locatie gebaseerde technologie innoveert omdat het zich richt op de individuele,
+		plaatsafhankelijke informatievraag, inspeelt op een veranderend gebruik van het landschap (onder andere
+		economische vernieuwing van landelijke gebieden) en bijdraagt aan een toeristisch-recreatief product gebaseerd
+		op GEO-Informatie. Bovendien is veel cultuurhistorische kennis nog niet ontsloten voor digitaal gebruik. Denk
+		bijvoorbeeld aan de kennis van historische verenigingen of van mensen die vaak al jaar en dag in een bepaalde
+		streek wonen en de prachtigste verhalen hebben. Deze kennis is wel erg waardevol. Het is belangrijk deze
+		verhalen digitaal op te slaan zodat je ze makkelijk opnieuw kan gebruiken. Bijvoorbeeld voor de Digitale
+		Wichelroede. Met project de Digitale Wichelroede bouwen en slaan we bruggen tussen geo-informatie deskundigen,
+		cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en
+		educatie-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling, want is
+		het een proeftuin voor geo-informatica en mobiele technologie.
+	</p>
 
-<p>
-	De verwachting is dat Locatie gebaseerde technologie innoveert omdat het zich richt op de individuele,
-	plaatsafhankelijke informatievraag, inspeelt op een veranderend gebruik van het landschap (onder andere
-	economische vernieuwing van landelijke gebieden) en bijdraagt aan een toeristisch-recreatief product geschrankt
-	op GEO-Informatie. Bovendien is veel cultuurhistorische kennis nog niet ontsloten voor digitaal gebruik. Denk
-	bijvoorbeeld aan de kennis van historische verenigingen of van mensen die vaak al jaar en dag in een bepaalde
-	streek wonen en de prachtigste verhalen hebben. Deze kennis is wel erg waardevol. Het is belangrijk deze
-	verhalen digitaal op te slaan zodat je ze makkelijk opnieuw kan gebruiken. Bijvoorbeeld voor de Digitale
-	Wichelroede. Met project de Digitale Wichelroede bouwen en slaan we bruggen tussen geo-informatie deskundigen,
-	cultuurhistorische bronhouders (zoals gemeenten, provincies, stichtingen en bewoners van een bepaald gebied) en
-	educatie-toeristische informatie deskundigen. Tegelijkertijd dient het project tot projectontwikkeling, want is
-	het een proeftuin voor geo-informatica en mobiele technologie.
-</p>
+	<H3>In welke gebieden wordt de Digitale Wichelroede in 2007 getest?</H3>
 
-<H3>In welke gebieden wordt de Digitale Wichelroede in 2007 getest?</H3>
+	<H3>Grebbelinie</H3>
 
-<p>
-	Er wordt op twee gebieden onderzoek gedaan. In Nijevelt, een nieuwbouwwijk in het Utrechtse Leidsche Rijn en in
-	de rgeio waar de Grebbelinie ligt.
-</p>
+	<p>
+		Dit gebied vol achttiende-eeuwse fortificaties geldt als een belangrijk toeristisch gebied in de Gelderse
+		Vallei. Hier bevindt de bezoeker zich in een lagenlandschap van natuur, cultuur en historie. Met behulp van
+		locatie gebaseerde services kun je je persoonlijk toegesneden verkenningstocht organiseren en kennis opdoen van
+		verschillende tijdslagen en cultuurlagen.
+	</p>
 
-<H3>Nijevelt</H3>
+	<H3>Contact</H3>
 
-<p>
-	In deze nieuwbouwwijk wordt de Digitale Wichelroede voor de beleving van een relatief klein gebied ingezet. In
-	Nijevelt bevindt de geschiedenis zich letterlijk in de aarde onder je voeten, in de vorm van archeologische
-	vondsten als boten en een antieke snelweg. Deze vondsten zijn puzzelstukken die deel uitmaken van een groot
-	verhaal dat vertelt over hoe deze plek er tweeduizend jaar geleden uitzag. Boven de grond is weinig meer te zien
-	van het verleden. Lopend over het terrein met een Digitale Wichelroede in de aanslag kun je de wereld van de
-	Romeinen opnieuw oproepen en waan je je archeoloog, zoekend naar 'sporen' uit het verleden.
-</p>
+	<p>
+		De Wichelroede wordt mede mogelijk gemaakt door Ruimte voor Geo-Informatie (RGI) en Provincie Utrecht en wordt
+		uitgevoerd door een consortium waarin de volgende partners plaatsnemen: Alterra, DS, Galileo, Gemeente Utrecht,
+		Kadaster TDN, KPN, Provincie Utrecht, Stichting Vernieuwing Gelderse Vallei (SVGV), Waag en Wageningen
+		Universiteit.
 
-<H3>Grebbelinie</H3>
+		Voor meer informatie kunt u contact opnemen met: <a href="mailto:info@digitalewichelroede.nl">info@digitalewichelroede.nl</a>
+		of 06 466 11 870
+	</p>
 
-<p>
-	Het gebied waar de Grebbelinie ligt is grootschaliger dan die van de Limesweg. Dit gebied vol achttiende-eeuwse
-	fortificaties geldt als een belangrijk toeristisch gebied in de Gelderse Vallei. Hier bevindt de bezoeker zich
-	in een lagenlandschap van natuur, cultuur en historie. Met behulp van locatie gebaseerde services kun je je
-	persoonlijk toegesneden verkenningstocht organiseren en kennis opdoen van verschillende tijdslagen en
-	cultuurlagen.
-</p>
-
-<H3>Contact</H3>
-
-<p>
-	De Wichelroede wordt mede mogelijk gemaakt door Ruimte voor Geo-Informatie (RGI) en Provincie Utrecht en wordt
-	uitgevoerd door een consortium waarin de volgende partners plaatsnemen: Alterra, DS, Galileo, Gemeente Utrecht,
-	Kadaster TDN, KPN, Provincie Utrecht, Stichting Vernieuwing Gelderse Vallei (SVGV), Waag en Wageningen
-	Universiteit.
-
-	Voor meer informatie kunt u contact opnemen met: <a href="mailto:info@digitalewichelroede.nl">info@digitalewichelroede.nl</a>
-	of 06 466 11 870
-</p>
-
-<p>
-	Het project gebruikt met toestemming van Paul Roncken (WUR-KGR-LAR) de titel De Digitale Wichelroede &copy;
-</p>
+	<p>
+		Het project gebruikt met toestemming van Paul Roncken (WUR-KGR-LAR) de titel De Digitale Wichelroede &copy;
+	</p>
