--- a/app/diwi/trunk/client/web/pages/mijnpagina.html
+++ b/app/diwi/trunk/client/web/pages/mijnpagina.html
@@ -1,6 +1,9 @@
-<h2>Mijn Pagina</h2>
+<h2>Mijn Trips</h2>
 <div id="triplist">
 
 </div>
+<span id="triplistbacklink"><a href="#" onclick="TRIP.showTrips()">ga terug naar trip overzicht</a></span>
 <div id="mapanchor">&nbsp;</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
