--- a/app/diwi/trunk/client/web/pages/routemap.html
+++ b/app/diwi/trunk/client/web/pages/routemap.html
@@ -1,5 +1,6 @@
 <p>Selecteer kaartlaag met (+) symbool. Inzoomen met shift-mouse-drag.</p>
 <div id="mapanchor"></div>
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 
 
