--- a/app/diwi/trunk/client/web/pages/mijnpagina.html
+++ b/app/diwi/trunk/client/web/pages/mijnpagina.html
@@ -1,8 +1,8 @@
-<h2>Mijn Trips</h2>
+<h2>Mijn Tochten</h2>
 <div id="triplist">
 
 </div>
-<span id="triplistbacklink"><a href="#" onclick="TRIP.showTrips()">ga terug naar trip overzicht</a></span>
+<span id="triplistbacklink"><a href="#" onclick="TRIP.showTrips()">ga terug naar overzicht tochten</a></span>
 <div id="mapanchor">&nbsp;</div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
