diwi: various server stuff getmap etc

--- a/app/diwi/trunk/client/web/index.html
+++ b/app/diwi/trunk/client/web/index.html
@@ -78,7 +78,8 @@
 			</p>
 
 			<p> Wachtwoord :<br>
-				<input type="password" name="password" id="fieldpassword" ><br>
+				<input type="password" name="password" id="fieldpassword" ><br/>
+				onthoud<br/><input id="autologin" type="checkbox" name="auto" onclick="DIWIAPP.toggleAutoLogin()" />
 
 				<div id="logforminlogbut" style="display:inherit">
 					<img id="butloginsubmit" class="button" src="media/buttons/login.gif"/>
