--- a/app/diwi/trunk/client/web/pages/maakroute.html
+++ b/app/diwi/trunk/client/web/pages/maakroute.html
@@ -5,10 +5,10 @@
 </div>
 
 
-<div id="radiobuttons" class="radiocaption">
+<!-- <div id="radiobuttons" class="radiocaption">
 	<input id="wandelen" name="rb1" type="radio" onClick="ROUTE.selectWandelen()"> Wandelen
 	<input id="fietsen" name="rb2" type="radio" onClick="ROUTE.selectFietsen()"> Fietsen
-</div>
+</div>    -->
 
 <!-- <div class="listboxes" id="thema-lb">
 </div>      -->
