all: check in all outstanding stuff

--- a/app/geosailing/trunk/svr2007/server/webapp/popup/comment.html
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/comment.html
@@ -34,12 +34,22 @@
 	<h2>Mededelingen</h2>
 	Hieronder medelingen van het Geosailing team.
 	<hr/>
-	<p>[7.jun 08:10] - just - <i>alleen boten uitgerust met GPS-transponder zijn zichtbaar op Geosailing !!</i></p>
+	<p><i><b>[9.jun.07 10:21] Zeilers, toeschouwers, We zijn erg blij met alle reacties op GEOSAILING.
+		Er blijkt ontzettend veel gebruik gemaakt te zijn van de Internetsite (in de 10.000-en hits).
+		Het heeft ons dan ook veel informatie gegeven over wat nog te doen, wat mogelijk is etc.
+		Graag zouden we van jullie (zoals in het commentaar) weten
+		wat jullie denken dat verbeterd zou moeten worden. Stuur dan een mailtje
+		naar <a href="mailto:d.carton@ecma.nhl.nl">d.carton@ecma.nhl.nl</a>.
+		Graag willen we speciaal de schippers bedanken die actief meegewerkt
+		hebben door een transponder aan boord te nemen. <br/>Groet, Geosailing team</b></i></p>
+	<hr/>
+<!--	<p>[7.jun 08:10] - just - <i>alleen boten (en lopers/fietsers!) uitgerust met GPS-transponder zijn zichtbaar op Geosailing !!</i></p>
 	<p>[7.jun 09:03] - just - <i>Yachtvision als eerste bij Kornwerder sluizen</i> </p>
 	<p>[7.jun 11:07] - just - <i>Op elkaar wachten en dan gezamelijk door de sluis Kornwerder zand</i> </p>
 	<p>[7.jun 20:52] - dennis - <i>Update vanaf de Risdam, ergens vlakbij de Paardehoek: - Bijna alle schepen liggen vast in de paardenhoek. Alleen de Greyhound en de Barcarole zijn er doorheen gekomen. De Yachtvision en de Early Bird zijn omgedraaid en lijken de race te hebben verlaten (of hebben ze een andere tactiek?). De GPRS dekkiing is hier ongeveer 0, dus helaas geen respons van de transponders. Later meer !</i> </p>
 	<p>[7.jun 22:10] - dennis - <i>Update vanaf de Risdam, ergens vlakbij Vlieland: - Bijna alle schepen liggen nog steeds vast in de paardenhoek, de een wat schever dan de ander (er wordt zelfs gepoetst aan de kiel). De loper van de Greyhound is al zo'n 25 minuten onderweg op Vlieland. Gezien het tij zouden de schepen in de paardehoek rond 11:00 uur verder kunnen varen. De blinde tonnen zijn dan een risico, maar de schippers zijn in overleg om hier een veilige doortocht te zoeken. </i> </p>
 	<p>[7.jun 22:41] - dennis - <i>Update vanaf de Risdam, haven Vlieland - De Greyhound heeft net de haven verlaten, en vaart op dood tij terug. Veel schepen liggen nog bij de Paardehoek. De Yachtvision en waarschijnlijk de Early Bird nemen een alteratieve route.</i></p>
+ -->
 	<h2>Commentaren</h2>
 	<div id="commentlist">
 		Bezig commentaren op te halen...
